refactor: 중복되는 테스트용 변수 Fixture 로 이동